# astrosource

./: .gitignore  .rtd-environment.yml  .travis.yml  LICENCE.txt  MANIFEST.in  README.md  README.rst  analyse.py  changelog.txt  comparison.py  detrend.py  eebls.py  identify.py  main.py  plots.py  pyproject.toml  requirements.pip  requirements.txt  setup.cfg  setup.py  test_comparison.py  test_identify.py  utils.py
.github/workflows/: publish-to-test-pypi.yml  pythonpackage.yml
astrosource/: __init__.py  analyse.py  astrosource.py  bug_test.py  comparison.py  detrend.py  eebls.py  identify.py  main.py  periodic.py  plots.py  utils.py
astrosource/test/: mocks.py  test_comparison.py  test_find_stars.py  test_identify.py  test_period.py
astrosource/test/test_files/comparison/: CalibAll.csv  CalibrationSanityPlotCoefficients.txt  CalibrationSanityPlot_Magnitude.eps  CalibrationSanityPlot_Time.eps  afvel_V_2458545d6216425998_2019d03d03T02d49d27d527_1a162669_10d284_kb26_alexhewett.npy  afvel_V_2458545d6216425998_2019d03d03T02d49d27d527_1a162669_10d284_kb26_alexhewett.psx  afvel_V_2458566d3491767151_2019d03d23T20d16d24d112_1a0775088_15d29_kb84_alexhewett.npy  afvel_V_2458566d3491767151_2019d03d23T20d16d24d112_1a0775088_15d29_kb84_alexhewett.psx  afvel_V_2458567d2834179611_2019d03d24T18d41d34d749_1a2122894_30d28_kb84_alexhewett.npy  afvel_V_2458567d2834179611_2019d03d24T18d41d34d749_1a2122894_30d28_kb84_alexhewett.psx  afvel_V_2458569d5545363668_2019d03d27T01d11d57d439_1a4580716_30d284_kb84_alexhewett.npy  afvel_V_2458569d5545363668_2019d03d27T01d11d57d439_1a4580716_30d284_kb84_alexhewett.psx  afvel_V_2458569d5876151882_2019d03d27T01d59d34d965_1a1025625_30d277_kb95_alexhewett.npy  afvel_V_2458569d5876151882_2019d03d27T01d59d34d965_1a1025625_30d277_kb95_alexhewett.psx  afvel_V_2458569d7594510601_2019d03d27T06d07d01d344_1a2519338_30d275_kb95_alexhewett.npy  afvel_V_2458569d7594510601_2019d03d27T06d07d01d344_1a2519338_30d275_kb95_alexhewett.psx  afvel_V_2458570d2495958530_2019d03d27T17d52d49d964_1a3102719_30d283_kb84_alexhewett.npy  afvel_V_2458570d2495958530_2019d03d27T17d52d49d964_1a3102719_30d283_kb84_alexhewett.psx  afvel_V_2458570d3171947468_2019d03d27T19d30d10d281_1a1087323_30d282_kb84_alexhewett.npy  afvel_V_2458570d3171947468_2019d03d27T19d30d10d281_1a1087323_30d282_kb84_alexhewett.psx  afvel_V_2458570d4636732419_2019d03d27T23d01d06d496_1a1226261_30d284_kb84_alexhewett.npy  afvel_V_2458570d4636732419_2019d03d27T23d01d06d496_1a1226261_30d284_kb84_alexhewett.psx  afvel_V_2458570d6085563670_2019d03d28T02d29d43d398_1a0758508_30d27_kb95_alexhewett.npy  (+49 more)
autovar/: __init__.py  analyse.py  comparison.py  eebls.py  identify.py  main.py  periodic.py  plots.py  test_comparison.py  test_identify.py  utils.py
autovar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autovar/test/: test_comparison.py  test_identify.py
autovar/test/test_files/: output_tests.py
autovar/test_files/comparison/: Waspd43b_w_30d27_2018d02d14T03d50d44d737_1a1569818_2458163d6561801019_kb95.psx  screenedComps.csv  targetstars.csv  usedImages.txt
autovar/test_files/comparison_good/: XOd2_ip_22d293_2017d01d04_1a0899013_57757d0522793000_kb29.csv
docs/: Catalogue Test.ipynb  basic_usage.rst  conf.py  index.rst
docs/astrosource/: index.rst
docs/source/: api_usage.rst  basic_usage.rst  conf.py  cookbook.rst  index.rst
joss/: paper.bib  paper.md
test_files/comparison/: Waspd43b_w_30d27_2018d02d14T03d26d06d777_1a2157407_2458163d6390746250_kb95.psx  Waspd43b_w_30d27_2018d02d14T04d07d39d757_1a1263495_2458163d6679275320_kb95.psx  Waspd43b_w_30d27_2018d02d14T04d08d18d637_1a1253206_2458163d6683783028_kb95.psx
test_files/comparison_good/: XOd2_ip_22d284_2017d01d04_1a089113_57757d0532642000_kb29.csv
test_files/stars/: usedImages_test.txt
(+77 files in other folders)
