[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrosource"
version = "1.7.0"
description = "Analysis script for sources with variability in their brightness"
readme = "README.md"
authors = [{ name = "Michael Fitzgerald", email = "info@realpython.com" },
    { name = "Edward Gomez", email = "egomez@lco.global"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["astronomy", "time-series", "analysis"]
dependencies = [
    "astropy==5.2.1",
    "astroquery==0.4.6",
    "barycorrpy==0.4.4",
    "beautifulsoup4==4.12.0",
    "certifi==2022.12.7",
    "click>=8.1.3",
    "colorlog>=6.7.0",
    "matplotlib>=3.7.1",
    "numpy>=1.24.2",
    "prettytable>=3.6.0",
    "pytest==7.2.2",
    "scipy>=1.10.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/zemogle/astrosource"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
astrosource = "astrosource.main:main"

[tool.setuptools]
packages = ["astrosource"]