[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrosource"
version = "1.7.1"
description = "Analysis script for sources with variability in their brightness"
readme = "README.md"
authors = [{ name = "Michael Fitzgerald", email = "info@realpython.com" },
    { name = "Edward Gomez", email = "egomez@lco.global"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["astronomy", "time-series", "analysis"]
dependencies = [
    "astropy>=4.3.1",
    "astroquery",
    "barycorrpy",
    "beautifulsoup4",
    "click",
    "colorlog",
    "matplotlib",
    "numpy>=1.17",
    "prettytable",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/zemogle/astrosource"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
astrosource = "astrosource.main:main"

[tool.setuptools]
packages = ["astrosource"]

