[metadata]
name = astrosource
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 1.0.0
author = Michael Fitzgerald and Edward Gomez
author_email =
description = Analysis script for sources with variability in their brightness
long_description =
license = MIT
url = https://github.com/zemogle/astrosource
edit_on_github = False
github_project = zemogle/astrosource
python_requires = ">=3.7"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy; click; matplotlib; numpy; pytest; astroquery; scipy; pandas

zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =

    astrosource = astrosource.main:main


[options.package_data]
* = *.c
astrosource = data/*
astrosource.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
